--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RecordsActivity"></activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity">
+        <activity android:name=".Update"></activity>
+        <activity android:name=".Delete" />
+        <activity android:name=".CustomerRecords" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/NoApp" />
+        <activity
+            android:name=".RegisterActivity"
+            android:theme="@style/NoApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +29,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:theme="@style/NoApp"/>
+            android:theme="@style/NoApp" />
     </application>
 
 </manifest>
