--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,19 +7,25 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Update"></activity>
-        <activity android:name=".Delete" />
-        <activity android:name=".CustomerRecords" />
+        <activity android:name=".RegisterActivity"
+            android:theme="@style/NoApp"></activity>
+        <activity android:name=".Update" />
+        <activity
+            android:name=".Delete"
+            android:theme="@style/NoApp" />
+        <activity
+            android:name=".CustomerRecords"
+            android:theme="@style/NoApp" />
         <activity
             android:name=".LoginActivity"
             android:theme="@style/NoApp" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".SplashScreen"
             android:theme="@style/NoApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
